	Fixed slapd-bdb entry cache delete failure (ITS#6577)
	Fixed slapd-bdb error propogation to overlays (ITS#6633)
	Fixed slapd-ldap debug output of timeout (ITS#6721)
	Fixed slapd-ldap DNSSRV referral chaining (ITS#6565)
	Fixed slapd-ldap chaining with onelevel scope (ITS#6699)
	Fixed slapd-ldap chaining with ppolicy (ITS#6540)
	Fixed slapd-ldap with SASL/EXTERNAL (ITS#6642)
	Fixed slapd-ndb to honor rootpw setting (ITS#6661)
	Fixed slapd-ndb hasSubordinates generation (ITS#6712)
	Fixed slapd-meta anon retry with failed auth method (ITS#6643)
	Fixed slapd-meta rebind proc (ITS#6665)
	Fixed slapd-meta to correctly rebind as user (ITS#6574)
	Fixed slapd-meta with SASL/EXTERNAL (ITS#6642)
	Fixed slapd-monitor hasSubordinates generation (ITS#6712)
	Fixed slapd-sql with null objectClass (ITS#6616)
	Fixed slapd-sql hasSubordinates generation (ITS#6712)
	Fixed slapo-pcache callback freeing (ITS#6640)
	Fixed slapo-pcache to ignore undefined attrs (ITS#6600)
	Fixed slapo-ppolicy don't update opattrs on consumers (ITS#6608)
	Fixed slapo-ppolicy to allow userPassword deletion (ITS#6620)
	Fixed slapo-refint when last group member is deleted (ITS#6663)
	Fixed slapo-refint with subtree rename (ITS#6730)
	Fixed slapo-rwm double free (ITS#6720)
	Fixed slapo-rwm crasher (ITS#6632)
	Fixed slapo-sssvlv initialization (ITS#6649)
	Fixed slapo-sssvlv to not advertise when unused (ITS#6647)
	Fixed slapo-sssvlv fix result code (ITS#6685)
	Fixed slapo-syncprov to send error if consumer is newer (ITS#6606)
	Fixed slapo-syncprov filter race condition (ITS#6708)
	Fixed slapo-syncprov active mod race (ITS#6709)
	Fixed slapo-syncprov to refresh if context is dirty (ITS#6710)
	Fixed slapo-syncprov CSN updates to all replicas (ITS#6718)
	Fixed contrib/autogroup LDAP URI with attribute filter (ITS#6536)
	Fixed contrib/nssov to only close socket on shutdown (ITS#6676)
	Fixed contrib/nssov multi platform support (ITS#6604)
	Build Environment
		Added support for [unsigned] long long (ITS#6622)